syntax = "proto3";

package pb;

option go_package = "github.com/NordSecurity/nordvpn-linux/daemon/pb";

message NordWhisperEnabled {
  bool enabled = 1;
}
